--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="grey">#8d99ae</color>
 
     <color name="blue">#2196F3</color>
+    <color name="orange">#DA680F</color>
+    <color name="blue_light">#A6C3F6</color>
 
-
-
+    
 </resources>
