--- a/app/src/main/res/drawable/app_bar_custom_back.xml
+++ b/app/src/main/res/drawable/app_bar_custom_back.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/orange"/>
+    <corners
+        android:bottomLeftRadius="39.00dp"
+        android:bottomRightRadius="39.00dp"
+        />
 
-</selector>
+</shape>
