--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.AuthMainActivity">
 
 
     <androidx.fragment.app.FragmentContainerView
@@ -14,5 +14,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/auth_nsv_graph" />
+        app:navGraph="@navigation/auth_nav_graph" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
